--- a/templates/evaluation.html
+++ b/templates/evaluation.html
@@ -5,7 +5,7 @@
 	<h1 style="margin-left: 3%;"> <br> Evaluation</h1>
 	<div style="margin-left: 3%; width: 75%;">
 		<p>This assessment contains a news to be evaluated which can be an article from the Social Media or from a news website which the veracity is known. Your goal is to read the article and answer the questions associated with the credibility of the article. <br>
-		Next you will find the same article but this time are presented the indicators of desinformation provided by the tool. <br>
+		Next you will find the same article but this time are presented the indicators of desinformation provided by the tool and you will have to answer the same questions taking into account the indicators. <br>
 		The assessment aims to evaluate the indicators proposed by this tool and assess the usefulness and impact on the answers obtained.</p>
 	</div>
 </section>
