--- a/static/main.css
+++ b/static/main.css
@@ -8,7 +8,7 @@ h2, h3, h4, h5, h6 {
 }
 
 .header h1{
-  padding: 4%;
+  padding: 2%;
   text-align: center;
   background: #213b52;
   color: white;
@@ -44,6 +44,7 @@ h2, h3, h4, h5, h6 {
 
 .navbar-expand-sm .navbar-nav .nav-item .nav-link:hover:not(.active) {
   background-color: #4d4d4d;
+  color: white;
 }
 
 #hero {
@@ -179,10 +180,12 @@ h2, h3, h4, h5, h6 {
   padding: 11px 15px;
 }
 
+/*comentado
+
 .active, .collapsible:hover {
   background-color: #555;
 }
-
+*/
 .content {
   padding: 0 18px;
   max-height: 0;
@@ -732,3 +735,97 @@ text-align: center;
     background-color: #E0C91F;
 }
 /*Cookie Consent End*/
+
+/* Submit form tabs*/
+
+.content3{
+  width: 450px;
+  height: auto;
+  margin: 0 auto;
+  padding: 30px;
+  margin-top: 7%;
+  margin-left: 20%;
+  margin-bottom: 30%;
+}
+.nav-pills.news{
+  width: 450px;
+}
+.nav-item.news{
+  width: 50%;
+}
+.nav-pills.news .nav-link{
+  font-weight: bold;
+  padding-top: 13px;
+  text-align: center;
+  background: #fff;
+  color: #000;
+  border-radius: 30px;  
+  border-color: black;
+  border-style: solid;
+  height: 100px;
+}
+.nav-pills.news .nav-link.active{
+  background: #A9A9A9;
+  color: #000;
+  border-width: 2px;
+}
+.tab-content.news{
+  position: absolute;
+  width: 53%;
+  height: 50%;
+  margin-top: -50px;
+  background: #fff;
+  color: #000;
+  border-radius: 30px;
+  z-index: 1000;
+  box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.4);
+  padding: 30px;
+  margin-bottom: 50px;
+}
+.tab-content.news button{
+  border-radius: 15px;
+  width: 100px;
+  margin: 0 auto;
+  float: right;
+  margin-top: 45%;
+}
+
+.form-control{
+  margin-top: 2%;
+-webkit-box-shadow: 0px 0px 14px -2px rgba(0,0,0,0.6);
+-moz-box-shadow: 0px 0px 14px -2px rgba(0,0,0,0.6);
+box-shadow: 0px 0px 14px -2px rgba(0,0,0,0.6);
+}
+
+.form-control-title{
+  margin-top: 2%;
+-webkit-box-shadow: 0px 0px 14px -2px rgba(0,0,0,0.6);
+-moz-box-shadow: 0px 0px 14px -2px rgba(0,0,0,0.6);
+box-shadow: 0px 0px 14px -2px rgba(0,0,0,0.6);
+}
+
+.button {
+  display: inline-block;
+  padding: 2px 14px;
+  font-size: 24px;
+  cursor: pointer;
+  text-align: center;
+  text-decoration: none;
+  outline: none;
+  color: #fff;
+  background-color: #A9A9A9;
+  border: none;
+  border-radius: 15px;
+  box-shadow: 0 6px #999;
+  float: right;
+}
+
+.button:hover {background-color: #808080}
+
+.button:active {
+  background-color: #000000;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+
+/* Submit form tabs*/
+
