--- a/templates/about.html
+++ b/templates/about.html
@@ -32,7 +32,7 @@
 		<!-- Main -->
 			<section id="main" class="wrapper style1">
 				<header class="major">
-					<h2>About FactMe</h2>
+					<h2 style="font-size: 350%; font-family: 'Times New Roman', Times, serif;">About FactMe</h2>
 				</header>
 				<div class="container5">
 					<div class="row5 150%">
@@ -57,21 +57,21 @@
 					<div style="margin-left: 3%; max-width: 95%;">
 						<h3 style="font-size: 2em;">Motivation</h3>
 						<p>The role of traditional information channels, like television and newspapers, on how we collect and consume news is becoming less prominent. The growth of social media and online news sources has played a crucial role in this transformation. In addiction, the consumption of fresh news content over the Internet is rapidly increasing, resulting from an abundance of technology, which can expose users globally.
-						However, this positive impact comes at a cost, it can also contribute to the spreading of disinformation, which can have many malicious purposes for example:
-						<ul>
-							<li>Promoting ideologies</li>
+						However, this positive impact comes at a cost, it can also contribute to the spreading of disinformation, which can have many malicious purposes for example:</p>
+						<ul style="list-style-type: square; margin-left: 4%;">
+							<li> Promoting ideologies</li>
 							<li>Gaining favor in political elections</li>
 							<li>Earning money</li>
 							<li>Generate ad revenue</li>
 						</ul>
-						Social media has become a critical publishing tool for journalists and the primary consumption method for citizens looking for the latest news. However, online content proliferation also brings disinformation with it, in social media platforms like Facebook, Twitter, and Whatsapp.
+						<p>Social media has become a critical publishing tool for journalists and the primary consumption method for citizens looking for the latest news. However, online content proliferation also brings disinformation with it, in social media platforms like Facebook, Twitter, and Whatsapp.
 						Disinformation is false or misleading information spread deliberately to deceive. This is a subset of misinformation, which is also false or inaccurate (while misinformation is shared regardless of intent to mislead, disinformation is shared deliberately). The terms misinformation and disinformation have often
 						been associated with the term fake news which is “a news article that is intentionally and verifiably false.” Therefore, it includes news articles intentionally written to mislead or misinform readers but can be verified as false through other sources. 
 						The damage of disinformation leads us to realize how vital a fake news detection tool could be. Recent research has shown techniques and approaches to detect fake news with artificial intelligence tools.
 						One such approach for news analysis consists in using NLP for feature extraction.
 						Feature extraction for disinformation analysis can be either content-based or context-based. Content-based features rely on linguistic features, referring to information that can be directly extracted from the text. Context features are extracted by considering relevant information surrounding the actual social media post or news content. These types of features are called non-linguistic disinformation metrics. A variable computed from one or more metrics, called an indicator, quantifies disinformation and helps consumers decide the credibility of the news </p>
 
-						<h3 style="font-size: 1.5em;">Fake news examples</h3>
+						<h3 style="font-size: 1.5em;">Fake news tragedy examples</h3>
 						<div class="row5">
 							<div class="4u 6u(2) 12u$(3)">
 								<article class="box post">
