--- a/templates/layout.html
+++ b/templates/layout.html
@@ -34,7 +34,7 @@
           <a class="nav-link" href="HomePage"><img src="static/Images/home.png" style= "width:25px; height:25px; text-align: center;" ></img></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Fact-checks</a>
+          <a class="nav-link" href="fact_checks">Fact-checks</a>
         </li>
         <!-- Dropdown -->
         <li class="nav-item dropdown">
@@ -48,7 +48,7 @@
 
 
         <li class="nav-item">
-          <a class="nav-link" href="#">How it works</a>
+          <a class="nav-link" href="how_it_works">How it works</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="about">About</a>
