--- a/templates/result.html
+++ b/templates/result.html
@@ -583,7 +583,7 @@
         {% if source == True %}
           <h4 align="center">Source: ({{ absolute_url }}) <img class="source"  src="static/Images/verified.png" alt="verified Icon"> </h4>
         {% else %}
-          <h4 align="center">Source  <img class="source" align="middle" src="static/Images/not_verified.png" alt="not verified Icon" > </h4>       
+          <h4 align="center">Source: ({{ absolute_url }})  <img class="source" align="middle" src="static/Images/not_verified.png" alt="not verified Icon" > </h4>       
         {% endif %}
 
           <button type="button" class="close" data-dismiss="modal">&times;</button>
