--- a/static/main.css
+++ b/static/main.css
@@ -826,6 +826,16 @@ box-shadow: 0px 0px 14px -2px rgba(0,0,0,0.6);
   background-color: #000000;
   box-shadow: 0 5px #666;
   transform: translateY(4px);
+}
 
 /* Submit form tabs*/
 
+
+.fact_check_text{
+   overflow: hidden;
+   text-overflow: ellipsis;
+   display: -webkit-box;
+   -webkit-line-clamp: 5; /* number of lines to show */
+   -webkit-box-orient: vertical;
+   text-align: left;
+}
