--- a/templates/how_it_works.html
+++ b/templates/how_it_works.html
@@ -41,19 +41,17 @@
 							<!-- Sidebar -->
 								<section id="sidebar">
 									<section>
-										<!--video controls autoplay>
-										  	<source src="movie.mp4" type="video/mp4">
-										  	<source src="movie.ogg" type="video/ogg">
+										<video width="520" height="310"  controls autoplay>
+										  	<source src="static/Images/video.mp4" type="video/mp4">
 										  	Your browser does not support the video tag.
-										</video!-->
-										<a href="#" class="image fit" ><img style="margin-top: 13%;" src="static/Images/search.png" alt="" /></a>
+										</video>
 									</section>
 								</section>
 						</div>
 						<div class="8u 12u$(2) important(2)">
 						
 							<!-- Content -->
-								<section id="content">
+								<section style="max-width: 70%; margin-left: 25%;" id="content">
 									<p style="margin-top: 10%;">The mission of FactMe is to help news consumers to better undestand the content and empower to judge the news articles by providing information quality indicators. To use FactMe you can provide an URL of the article or the article text.</p> 
 									<p> FactMe will provide a disinformation score which will predict the credibility of the article and also the indicators of disinformation that were used to compute the disinformations score.</p> 
 								</section>
