--- a/templates/evaluation_interface.html
+++ b/templates/evaluation_interface.html
@@ -4,9 +4,9 @@
 <section style="  background: #ffddcc; height: 250px; margin-bottom: 25%;">
 	<h1 style="margin-left: 3%;"> <br> Evaluation of the interface</h1>
 	<div style="margin-left: 3%; width: 75%;">
-		<p> This assessment is intended to assess the user interface. The goal is for a consumer to use the tool by submitting some articles and evaluating the user interface by answering the following questionnaire: <a href="https://forms.gle/bpQRU6eyXKmgav188">https://forms.gle/bpQRU6eyXKmgav188</a> </p>
+		<p> This evaluation is intended to assess the user interface. The goal is for a consumer to use the tool by submitting some articles or by checking some previous articles submitted in Fact-checks and evaluate the user interface by answering the following questionnaire: <a href="https://forms.gle/bpQRU6eyXKmgav188">https://forms.gle/bpQRU6eyXKmgav188</a> </p>
 		<p> This questionnaire is anonymous and does not store any personal data. </p>  
-	    <p> This questionnaire will take approximately 15 minutes to answer. We are thankful to you. </p> 
+	    <p> This questionnaire will take approximately 10 minutes to answer. We are thankful to you. </p> 
 	</div>
 </section>
 
